# live_battlefield

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.e2e  README.md  alembic.ini  description.md  docker-compose.e2e.yml  docker-compose.yml  migrations.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_bomb_value.py  add_bomb_value.py
app/: config.py  database.py  main.py  models.py  sse_manager.py  team_view.py  types.py
app/api/: routes.py
app/bot/: handlers.py  helpers.py  keyboards.py
app/events/: __init__.py  factory.py  models.py  saver.py  types.py
app/game/: board.py  ships.py  state.py
app/scripts/: init_test_db.py
app/services/: ai_player.py  ship_placement.py
app/templates/: admin.html  admin_create.html  admin_dashboard.html  admin_login.html  events.html  game_master.html  locations.html  map.html  super_admin.html  team.html
docs/: TODO.md
migrations/: add_bomb_value.sql
scripts/: battle-game.sh  dummy_data.py  get-public-url.sh  prepare-game.sh  reset-game.sh
tasks/: lessons.md
tests/: conftest.py  test_api.py  test_board_rendering.py  test_bombs_added_event.py  test_coordinate_parsing.py  test_event_sequences.py  test_game_logic.py  test_game_state.py  test_place_all_ships.py  test_ship_placement.py  test_team_reset_event.py  test_team_state.py  test_telegram_handlers.py  test_types.py
tests_e2e/: config.py  conftest.py  test_admin_dashboard.py  test_complete_game.py  test_gm_page.py  test_locations_page.py  test_navigation.py  test_team_page.py
(+35 files in other folders)
